force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>Captures different sources of income for contacts</description>
    <label>Income</label>
    <nameField>
        <displayFormat>INC{000000}</displayFormat>
        <label>Income Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>