force-app/main/default/objects/Income__c/fields/Income_Detail__c.field-meta.xml
<CustomField>
    <fullName>Income_Detail__c</fullName>
    <label>Income Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>