force-app/main/default/objects/Income__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <formula>CASE(Frequency__c,
&apos;Hourly&apos;, Amount__c * Monthly_Hours__c,
&apos;Daily&apos;, Amount__c * 20,
&apos;Weekly&apos;, Amount__c * 4,
&apos;Bi-Weekly&apos;, Amount__c * 2,
&apos;Monthly&apos;, Amount__c,
&apos;Annually&apos;, Amount__c / 12,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>