force-app/main/default/objects/Income__c/fields/Monthly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Hours__c</fullName>
    <label>Monthly Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>